--- a/style.css
+++ b/style.css
@@ -33,8 +33,9 @@
   }
   .hero-image p{
     color: #EEEEEE;
-    margin-left: 50%;
+    margin-left: 40%;
     margin-top: 20px;
+    font-size: 110%;
   }
   
 }
