--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .navbar{background-color:rgba(0,0,0,.1)}.top-nav-collapse{background-color:#222222}@media only screen and (max-width:768px){.navbar{background-color:#222222}}
 .navbar {
   color: #EEEEEE;
